--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,49 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+buildscript {
+    ext {
+        /*Gradle*/
+        gradleVersion = '7.2.1'
+
+        /*Kotlin*/
+        kotlinVersion = '1.6.21'
+        coroutinesVersion = '1.6.1'
+
+        /*Jetpack*/
+        coreVersion = '1.8.0'
+        appcompatVersion = '1.4.2'
+        constraintLayoutVersion = '2.1.4'
+        recyclerViewVersion = '1.2.1'
+        navigationVersion = '2.4.2'
+        lifecycleVersion = '2.4.1'
+        roomVersion = '2.4.2'
+
+        /*Dependency Injection*/
+        koinVersion = '3.2.0'
+
+        /*UI*/
+        materialVersion = '1.6.1'
+
+        /*Networking*/
+        retrofitVersion = '2.9.0'
+
+        /*Utils*/
+        brokerVersion = '1.1.1'
+
+        /*Testing*/
+        junitVersion = '4.13.2'
+        androidJunitVersion = '1.1.3'
+        espressoVersion = '3.4.0'
+        truthVersion = '1.1.3'
+    }
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath("com.android.tools.build:gradle:$gradleVersion")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion")
+    }
 }
 
 task clean(type: Delete) {
