--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         gradleVersion = '7.2.1'
 
         /*Kotlin*/
-        kotlinVersion = '1.6.21'
+        kotlinVersion = '1.7.0'
         coroutinesVersion = '1.6.1'
 
         /*Jetpack*/
@@ -15,7 +15,7 @@ buildscript {
         recyclerViewVersion = '1.2.1'
         navigationVersion = '2.4.2'
         lifecycleVersion = '2.4.1'
-        roomVersion = '2.4.2'
+        roomVersion = '2.5.0-alpha02'
 
         /*Dependency Injection*/
         koinVersion = '3.2.0'
@@ -34,6 +34,7 @@ buildscript {
         androidJunitVersion = '1.1.3'
         espressoVersion = '3.4.0'
         truthVersion = '1.1.3'
+        testCoreVersion = '1.4.0'
     }
     repositories {
         google()
